[package]
authors = ["TakuKitamura <takukitamura.io@gmail.com>"]
edition = "2018"
name = "rbxlx-to-rojo-json"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbx_dom_weak = {git = "https://github.com/rojo-rbx/rbx-dom.git"}
rbx_xml = {git = "https://github.com/rojo-rbx/rbx-dom.git"}
serde_json = "1.0"
